# Jubigestor

./: .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/data/: README.md
backend/data/corpus/: cobros-activacion-haberes-suspendidos.md  cobros-apoderado.md  cobros-calendario-de-pagos.md  cobros-cambio-medio-de-cobro.md  cobros-recibo-de-haberes.md  cobros-reclamo-haberes-impagos.md  cobros-rehabilitacion-prestacion.md  como-iniciar-mi-jubilacion.md  jubilacion-ordinaria-cartilla.md  moratoria.md  pension-compania-seguros-retiro.md  pension-puam.md  solicitud-prestaciones-ps-6-18.md  tareas-de-cuidado.md
backend/jubigestor/: config.py  main.py  rag.py  ratelimit.py
backend/jubigestor/api/routes/: chat.py  health.py
backend/jubigestor/db/: __init__.py  repository.py  schema.sql
backend/jubigestor/ingestion/: chunker.py  extractor.py  loader.py  pipeline.py
backend/jubigestor/llm/: __init__.py  base.py  echo.py  gemini.py  prompts.py
backend/jubigestor/schemas/: chat.py
backend/scripts/: extract_pdf.py  ingest.py  init_db.py  query.py  smoke_db.py
frontend/: package.json  pnpm-lock.yaml
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: chat.tsx  markdown.tsx
