[project]
name = "jubigestor-backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Bruno Simone",email = "brunosimone.mdq@gmail.com"}
]
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi (>=0.136.1,<0.137.0)",
    "uvicorn[standard] (>=0.46.0,<0.47.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.7.0,<3.0.0)",
    "google-genai (>=1.0.0,<2.0.0)",
    "psycopg[binary,pool] (>=3.2.0,<4.0.0)",
    "pgvector (>=0.3.0,<0.4.0)",
    "langchain-text-splitters (>=0.3.0,<0.4.0)",
    "pypdf (>=5.0.0,<6.0.0)"
]


[tool.poetry]
packages = [{include = "jubigestor"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
